<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <modelVersion>4.0.0</modelVersion>
  <groupId>edu.msudenver.cs.jdnss</groupId>
  <artifactId>jdnss</artifactId>
  <packaging>jar</packaging>
  <version>2.0</version>
  <name>Java DNS Server</name>
  <url>https://github.com/drsjb80/JDNSS</url>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>edu.msudenver.cs</groupId>
      <artifactId>JCLO</artifactId>
      <version>1.3.6</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.8.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.8.1</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.16.16</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  <profiles>
    <profile>
      <id>java8</id>
      <activation>
        <jdk>1.8</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.1</version>
            <configuration>
              <source>1.8</source>
              <target>1.8</target>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>2.17</version>
            <configuration>
              <configLocation>checkstyle.xml</configLocation>
            </configuration>
            <dependencies>
              <dependency>
                <groupId>com.puppycrawl.tools</groupId>
                <artifactId>checkstyle</artifactId>
                <version>7.6</version>
              </dependency>
            </dependencies>
            <executions>
              <execution>
                <id>validate</id>
                <phase>validate</phase>
                <configuration>
                  <configLocation>file:checkstyle.xml</configLocation>
                  <encoding>UTF-8</encoding>
                  <failsOnError>true</failsOnError>
                  <linkXRef>false</linkXRef>
                </configuration>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.0.0</version>
            <configuration>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>2.4</version>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>edu.msudenver.cs.jdnss.JDNSS</mainClass>
                </manifest>
              </archive>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.0.0</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>shade</goal>
                </goals>
                <configuration>
                  <transformers>
                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                      <mainClass>edu.msudenver.cs.jdnss.JDNSS</mainClass>
                    </transformer>
                  </transformers>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
              <groupId>org.eluder.coveralls</groupId>
              <artifactId>coveralls-maven-plugin</artifactId>
              <version>4.3.0</version>
              <configuration>
                  <repoToken>mMde1Ri9mGjCLYHHa1426df5cx3MLQ9qa</repoToken>
              </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.7.6.201602180812</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
        </executions>
      </plugin>     
      </plugins>
        <resources>
          <resource>
            <directory>src/main/resources</directory>
            <filtering>true</filtering>
          </resource>
        </resources>
      </build>
    </profile>
  </profiles>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>2.7</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>2.7</version>
        <configuration>
          <formats>
            <format>html</format>
            <format>xml</format>
          </formats>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>3.0.4</version>
      </plugin>
    </plugins>
  </reporting>
  <organization>
    <name>MSU Denver Computer Science</name>
    <url>http://cs.msudenver.edu</url>
  </organization>
  <developers>
    <developer>
      <id>beatys</id>
      <name>Steve Beaty</name>
      <email>beatys@msudenver.edu</email>
      <url>http://weba.msudenver.edu/searchchannel/jsp/directoryprofile/profile.jsp?uName=beaty</url>
      <organization>MSU Denver Computer Science</organization>
      <organizationUrl>http://cs.msudenver.edu</organizationUrl>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>America/Denver</timezone>
      <properties>
        <picUrl>http://pipes.org/beatysmall.jpg</picUrl>
      </properties>
    </developer>
  </developers>
  <issueManagement>
    <system>Github</system>
    <url>https://github.com/drsjb80/JDNSS/issues</url>
  </issueManagement>
  <description>
    JDNSS is a small DNS server written in Java. It was written to be both
    more portable and more secure due to its implementation in Java. It is
    currently intended for use as a "leaf" server as it does not do iterative
    or recursive lookups for clients, nor does it do any cacheing. It reads
    BIND zone files.
  </description>
  <licenses>
    <license>
      <name>GNU General Public License v3</name>
      <url>https://www.gnu.org/licenses/gpl.html</url>
      <distribution>repo</distribution>
    </license>
    <license>
      <name>FreeBSD</name>
      <url>https://www.freebsd.org/copyright/freebsd-license.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
</project>
